--- a/hs-duktape.cabal
+++ b/hs-duktape.cabal
@@ -37,7 +37,7 @@ library
       , unordered-containers
       , text
       , bytestring
-      , aeson
+      , aeson <2
     default-language: Haskell2010
     exposed-modules:
         Scripting.Duktape
