--- a/hs-duktape.cabal
+++ b/hs-duktape.cabal
@@ -15,6 +15,8 @@ extra-source-files:
     dukconfig/dist/duktape.c
     dukconfig/dist/duktape.h
     dukconfig/dist/duk_config.h
+    dukconfig/dist/duk_module_duktape.c
+    dukconfig/dist/duk_module_duktape.h
 tested-with:
     GHC == 8.6.3
 
@@ -45,9 +47,15 @@ library
     ghc-options: -Wall
     hs-source-dirs: library
     include-dirs: dukconfig/dist
-    c-sources: dukconfig/dist/duktape.c
-    includes: duktape.h
-    install-includes: duktape.h
+    c-sources:
+      dukconfig/dist/duktape.c
+      dukconfig/dist/duk_module_duktape.c
+    includes:
+      duktape.h
+      duk_module_duktape.h
+    install-includes:
+      duktape.h
+      duk_module_duktape.h
     cc-options: -Wno-discarded-qualifiers -std=c99 -fstrict-aliasing -fomit-frame-pointer
 
 test-suite tests
